@@ -3,5 +3,5 @@
 
 <http://linuxsampler.org/plugins/linuxsampler>
     a lv2:Plugin ;
-    lv2:binary <linuxsampler.so> ;
+    lv2:binary <linuxsampler@LIB_EXT@> ;
     rdfs:seeAlso <linuxsampler.ttl> .
